--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!-- File: contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,9 +10,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="description" content="Get in touch with Advanced Textile Solutions for bespoke textile accessories and expert manufacturing services. Let's create something extraordinary together.">
+  <meta name="keywords" content="ATS, ats, advanced textile solutions, textile solutions, sewjackie, textiles, Jackie Cunningham, bbc advanced textile solutions, bbc textiles, ats services, brain scanning helmets, custom saddle, medicaps, ats projects, connecting textiles to industry, textile fashion, Bespoke Brain-Scanning Helmet Inserts, Customised Saddle Cloths, Gifts and Accessories, Well-being packs, bespoke phone pouches, specs cases, device protection solutions, textile solutions uk, advanced textile solutions uk, ats uk">
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 </head>
-  <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FTKV47WWGC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -24,7 +27,7 @@
   <header class="navbar">
     <div class="nav-container">
       <div class="logo-container">
-        <img class="logo" src="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659.jpeg" alt="Logo" />
+        <img class="logo" src="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659.jpeg" alt="Advanced Textile Solutions Company Logo" title="Advanced Textile Solutions Company Logo" />
       </div>
       <h1 class="brand">ADVANCED TEXTILE SOLUTIONS</h1>
       <div class="hamburger" id="hamburger">
@@ -71,9 +74,10 @@
                   <textarea class="textinput" name="message" placeholder="Please enter query..." required></textarea>
                 </div>
               </div>
-              <button type="submit" class="submit-btn">Submit</button>
+              <button id="submit-button" type="submit" class="submit-btn">Submit</button>
               <p id="form-status" style="margin-top: 1rem; font-size: 1rem;"></p>
             </div>
+
             <div class="contact-info-block">
               <p class="info-label">📞 Contact Number: <span class="info-detail">(+44) 7713893233</span></p>
               <p class="info-label">⏰ Working Hours: <span class="info-detail">Mon - Fri: 9:00 AM - 6:00 PM</span></p>
@@ -88,14 +92,18 @@
     <div class="footer-left">
       <span class="footer-icon" data-type="phone">📞</span>
       <span class="footer-info" id="footer-phone">(+44)7713893233</span>
+
       <span class="footer-icon" data-type="email">✉️</span>
       <span class="footer-info" id="footer-email">ats@sewjackie.com</span>
     </div>
+
     <div class="footer-right">
       <span class="footer-icon" data-type="link">🔗</span>
       <span class="footer-info" id="footer-link">www.advancedtextiles.com</span>
+
       <span class="footer-icon" data-type="video">Linkedin</span>
-      <span class="footer-info" id="footer-video">https://www.linkedin.com/in/jackie-cunningham-9a5398188</span>
+      <span class="footer-info" id="footer-video">https://www.linkedin.com/in/jackie-cunningham-9a5398188/?originalSubdomain=uk</span>
+
       <span class="footer-icon" data-type="photo">📷</span>
       <span class="footer-info" id="footer-photo">advancedtextilesolutions</span>
     </div>
