--- a/about.html
+++ b/about.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="about.css" />
   <link rel="icon" type="image/png" href="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659 copy.jpeg" />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@400;700&display=swap" rel="stylesheet" />
+  <meta name="description" content="Learn more about Advanced Textile Solutions, a UK-based leader in creating custom, high-performance textile products tailored to industry needs.">
+  <meta name="keywords" content="ATS, ats, advanced textile solutions, textile solutions, sewjackie, textiles, Jackie Cunningham, bbc advanced textile solutions, bbc textiles, ats services, brain scanning helmets, custom saddle, medicaps, ats projects, connecting textiles to industry, textile fashion, Bespoke Brain-Scanning Helmet Inserts, Customised Saddle Cloths, Gifts and Accessories, Well-being packs, bespoke phone pouches, specs cases, device protection solutions, textile solutions uk, advanced textile solutions uk, ats uk">
 </head>
-  <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FTKV47WWGC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -21,7 +23,7 @@
   <header class="navbar">
     <div class="nav-container">
       <div class="logo-container">
-        <img class="logo" src="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659.jpeg" alt="Logo" />
+        <img class="logo" src="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659.jpeg" alt="Advanced Textile Solutions Company Logo" />
       </div>
       <h1 class="brand">ADVANCED TEXTILE SOLUTIONS</h1>
       <div class="hamburger" id="hamburger">
@@ -39,7 +41,6 @@
   </header>
 
   <main class="about-container">
-    <!-- Intro Section -->
     <section class="intro-section">
       <div class="intro-text">
         <h2>Our Story</h2>
@@ -50,11 +51,12 @@
         <p>Now moving forwards, the Advance Textile Solutions repertoire has extended into human healthcare, wellbeing and equestrian care we don’t stop there. We’ve realised that bespoke fabric design can be the solution – whatever the textile problem we’re ready to collaborate with you to find the answer.</p>
       </div>
       <div class="intro-images">
-        <img src="./Gallery/DSC00128.jpeg" alt="Founder sewing masks" />
-      </div>
+        <img src="./Gallery/DSC00128.jpeg" 
+        alt="Founder of Advanced Textile Solutions sewing face masks during the pandemic" 
+        title="Founder of Advanced Textile Solutions sewing face masks during the pandemic" />
+         </div>
     </section>
 
-    <!-- FAQ Section -->
     <section class="faq-section">
       <h2>Frequently Asked Questions</h2>
       <div class="faq-container">
@@ -117,21 +119,20 @@
     <div class="footer-left">
       <span class="footer-icon" data-type="phone">📞</span>
       <span class="footer-info" id="footer-phone">(+44)7713893233</span>
-  
+
       <span class="footer-icon" data-type="email">✉️</span>
       <span class="footer-info" id="footer-email">ats@sewjackie.com</span>
     </div>
-  
+
     <div class="footer-right">
       <span class="footer-icon" data-type="link">🔗</span>
       <span class="footer-info" id="footer-link">www.advancedtextiles.com</span>
-  
+
       <span class="footer-icon" data-type="video">Linkedin</span>
       <span class="footer-info" id="footer-video">https://www.linkedin.com/in/jackie-cunningham-9a5398188/?originalSubdomain=uk</span>
 
       <span class="footer-icon" data-type="photo">📷</span>
       <span class="footer-info" id="footer-photo">advancedtextilesolutions</span>
-  
     </div>
   </footer>
 
