--- a/services.html
+++ b/services.html
@@ -9,8 +9,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="keywords" content="ATS, ats, advanced textile solutions, textile solutions, sewjackie, textiles, Jackie Cunningham, bbc advanced textile solutions, bbc textiles, ats services, brain scanning helmets, custom saddle, medicaps, ats projects, connecting textiles to industry, textile fashion, Bespoke Brain-Scanning Helmet Inserts, Customised Saddle Cloths, Gifts and Accessories, Well-being packs, bespoke phone pouches, specs cases, device protection solutions, textile solutions uk, advanced textile solutions uk, ats uk">
+  <meta name="description" content="Explore our custom textile services, from innovative design to specialized manufacturing. Advanced Textile Solutions delivers tailored solutions for every project.">
 </head>
-  <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FTKV47WWGC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -23,7 +25,7 @@
   <header class="navbar">
     <div class="nav-container">
       <div class="logo-container">
-        <img class="logo" src="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659.jpeg" alt="Logo" />
+        <img class="logo" src="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659.jpeg" alt="Advanced Textile Solutions Company Logo" title="Advanced Textile Solutions Company Logo" />
       </div>
       <h1 class="brand">ADVANCED TEXTILE SOLUTIONS</h1>
       <div class="hamburger" id="hamburger">
@@ -46,41 +48,33 @@
     <section class="projects-grid">
       <div class="project-card">
         <div class="project-image">
-          <img src="./Gallery/46e81ed9-69bb-4cd4-b913-8fb5fec30da8.jpeg" alt="Project 1">
+          <img src="./Gallery/46e81ed9-69bb-4cd4-b913-8fb5fec30da8.jpeg" alt="Textile Research and Development Service" title="Textile Research and Development Service">
         </div>
-        <p class="project-description">At Advanced Textile Solutions, we offer comprehensive research and development services to collaborate with your industry.  
-          We work closely with you to understand your needs and develop innovative, tailored textile solutions. 
-          Together, we transform your ideas into practical, stylish accessories that meet your unique requirements</p>
+        <p class="project-description">At Advanced Textile Solutions, we offer comprehensive research and development services to collaborate with your industry. We work closely with you to understand your needs and develop innovative, tailored textile solutions. Together, we transform your ideas into practical, stylish accessories that meet your unique requirements</p>
       </div>
       <div class="project-card">
         <div class="project-image">
-          <img src="./Gallery/image0+(41).jpeg" alt="Project 2">
+          <img src="./Gallery/image0+(41).jpeg" alt="Expert Textile Design Service" title="Expert Textile Design Service">
         </div>
-        <p class="project-description">At Advanced Textile Solutions, we provide expert design services to collaborate with your industry. 
-          Our team partners with you to create innovative and stylish textile accessories tailored to your specific needs. 
-          Together, we bring your vision to life with creativity and precision.</p>
+        <p class="project-description">At Advanced Textile Solutions, we provide expert design services to collaborate with your industry. Our team partners with you to create innovative and stylish textile accessories tailored to your specific needs. Together, we bring your vision to life with creativity and precision.</p>
       </div>
       <div class="project-card">
         <div class="project-image">
-          <img src="./Gallery/manufacturing.jpeg" alt="Project 3">
+          <img src="./Gallery/manufacturing.jpeg" alt="Top-Quality Textile Manufacturing Service" title="Top-Quality Textile Manufacturing Service">
         </div>
-        <p class="project-description">At Advanced Textile Solutions, we offer top-quality manufacturing services to bring your designs to life.
-           Our custom built facilities and skilled team ensure precision and excellence in producing custom textile accessories. 
-          We are dedicated to delivering reliable, high-quality products that meet your exact specifications.</p>
+        <p class="project-description">At Advanced Textile Solutions, we offer top-quality manufacturing services to bring your designs to life. Our custom built facilities and skilled team ensure precision and excellence in producing custom textile accessories. We are dedicated to delivering reliable, high-quality products that meet your exact specifications.</p>
       </div>
       <div class="project-card">
         <div class="project-image">
-          <img src="./Gallery/retail.jpg" alt="Project 4">
+          <img src="./Gallery/retail.jpg" alt="Customized Products for Retail" title="Customized Products for Retail">
         </div>
-        <p class="project-description">Advanced Textile Solutions creates a range of desirable, customized products for the retail industry.
-           We supply high-quality, innovative accessories wholesale, ensuring unique and stylish solutions tailored to your needs.</p>
+        <p class="project-description">Advanced Textile Solutions creates a range of desirable, customized products for the retail industry. We supply high-quality, innovative accessories wholesale, ensuring unique and stylish solutions tailored to your needs.</p>
       </div>
       <div class="project-card">
         <div class="project-image">
-          <img src="./Gallery/Industry.jpeg" alt="Project 5">
+          <img src="./Gallery/Industry.jpeg" alt="Industry-Wide Textile Solutions" title="Industry-Wide Textile Solutions">
         </div>
-        <p class="project-description">Advanced Textile Solutions specialises in achieving your textile goals across various industries. 
-          Whether you're in fashion, hospitality, healthcare, or automotive sectors, we deliver tailored textile solutions that meet your specific needs with creativity and precision.</p>
+        <p class="project-description">Advanced Textile Solutions specialises in achieving your textile goals across various industries. Whether you're in fashion, hospitality, healthcare, or automotive sectors, we deliver tailored textile solutions that meet your specific needs with creativity and precision.</p>
       </div>
     </section>
   </main>
@@ -89,21 +83,20 @@
     <div class="footer-left">
       <span class="footer-icon" data-type="phone">📞</span>
       <span class="footer-info" id="footer-phone">(+44)7713893233</span>
-  
+
       <span class="footer-icon" data-type="email">✉️</span>
       <span class="footer-info" id="footer-email">ats@sewjackie.com</span>
     </div>
-  
+
     <div class="footer-right">
       <span class="footer-icon" data-type="link">🔗</span>
       <span class="footer-info" id="footer-link">www.advancedtextiles.com</span>
-  
+
       <span class="footer-icon" data-type="video">Linkedin</span>
       <span class="footer-info" id="footer-video">https://www.linkedin.com/in/jackie-cunningham-9a5398188/?originalSubdomain=uk</span>
 
       <span class="footer-icon" data-type="photo">📷</span>
       <span class="footer-info" id="footer-photo">advancedtextilesolutions</span>
-  
     </div>
   </footer>
 
