--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,10 @@
   <link rel="icon" type="image/png" href="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659.jpeg" />
   <link rel="stylesheet" href="projects.css" />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@400;700&display=swap" rel="stylesheet">
-
+  <meta name="description" content="View our portfolio of custom textile projects across various industries. See how Advanced Textile Solutions turns innovative ideas into real-world success.">
+  <meta name="keywords" content="ATS, ats, advanced textile solutions, textile solutions, sewjackie, textiles, Jackie Cunningham, bbc advanced textile solutions, bbc textiles, ats services, brain scanning helmets, custom saddle, medicaps, ats projects, connecting textiles to industry, textile fashion, Bespoke Brain-Scanning Helmet Inserts, Customised Saddle Cloths, Gifts and Accessories, Well-being packs, bespoke phone pouches, specs cases, device protection solutions, textile solutions uk, advanced textile solutions uk, ats uk">
 </head>
-  <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FTKV47WWGC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -22,7 +23,7 @@
     <header class="navbar">
         <div class="nav-container">
           <div class="logo-container">
-            <img class="logo" src="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659.jpeg" alt="Logo" />
+            <img class="logo" src="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659.jpeg" alt="Advanced Textile Solutions Company Logo" title="Advanced Textile Solutions Company Logo" />
           </div>
           <h1 class="brand">ADVANCED TEXTILE SOLUTIONS</h1>
       
@@ -47,23 +48,23 @@
     <section class="projects-grid">
       <div class="project-card" data-title="Medi-Caps" data-description="One of our flagship products is a custom insert designed for a revolutionary brain-scanning helmet. These inserts are utilised worldwide in research facilities to study brain activity and are on the verge of receiving medical approval. Our inserts provide unparalleled comfort to the wearer, ensuring a snug fit that accommodates various head shapes and sizes. This comfort is crucial for extended research sessions, allowing for accurate and consistent data collection without causing discomfort or distraction.">
         <h3 class="project-title">Medi-Caps</h3>
-        <img src="./Gallery/medicaps.jpg" alt="Medi-Caps">
+        <img src="./Gallery/medicaps.jpg" alt="Medi-Caps Brain-Scanning Helmet Insert" title="Medi-Caps Brain-Scanning Helmet Insert">
       </div>
-      <div class="project-card" data-title="Saddlecloths" data-description="We provide bespoke saddle cloths to numerous horse racing courses nationwide. Designed for optimal performance and durability, our saddle cloths are tailored to meet the specific requirements of each racing course. Each cloth is crafted with precision from high-quality materials, ensuring both comfort for the horse and enhanced performance. We offer a variety of customisation options, including pockets with dividers which can be used to hold timing devices and weights.  Our commitment to quality and attention to detail have made our saddle cloths a favourite among trainers and jockeys alike. Our esteemed customers include William Hill, Qatar, and Totes.">
+      <div class="project-card" data-title="Saddlecloths" data-description="We provide bespoke saddle cloths to numerous horse racing courses nationwide. Designed for optimal performance and durability, our saddle cloths are tailored to meet the specific requirements of each racing course. Each cloth is crafted with precision from high-quality materials, ensuring both comfort for the horse and enhanced performance. We offer a variety of customisation options, including pockets with dividers which can be used to hold timing devices and weights. Our commitment to quality and attention to detail have made our saddle cloths a favourite among trainers and jockeys alike. Our esteemed customers include William Hill, Qatar, and Totes.">
         <h3 class="project-title">Saddlecloths</h3>
-        <img src="./Gallery/sadlecloths.gif" alt="Saddlecloths">
+        <img src="./Gallery/sadlecloths.gif" alt="Bespoke Racing Saddlecloths" title="Bespoke Racing Saddlecloths">
       </div>
       <div class="project-card" data-title="Retail Gifts" data-description="We offer a wide range of tailored, made-to-measure gifts and accessories supplied to the retail trade. Available in several retail outlets and in our own online shop, our products are crafted with care and attention to detail, ensuring they make perfect presents for any occasion. From elegant accessories to unique gift items, each piece reflects our commitment to quality and craftsmanship, making them cherished choices for all your gifting needs.">
         <h3 class="project-title">Retail Gifts</h3>
-        <img src="./Gallery/orpagc.gif" alt="Retail Gifts">
+        <img src="./Gallery/orpagc.gif" alt="Tailored Retail Gifts and Accessories" title="Tailored Retail Gifts and Accessories">
       </div>
       <div class="project-card" data-title="Wellbeing Packs" data-description="Introducing Sewjackie's Improved Heat Pads! Our enhanced design features a removable cover for easy cleaning and a mini essential oil of your choice to elevate your relaxation experience. These versatile pads can also be used as soothing eye masks, providing the perfect blend of comforting warmth and aromatic bliss.">
         <h3 class="project-title">Wellbeing Packs</h3>
-        <img src="./Gallery/wellbeing packs.jpeg" alt="Wellbeing">
+        <img src="./Gallery/wellbeing packs.jpeg" alt="Relaxation Wellbeing Packs" title="Relaxation Wellbeing Packs">
       </div>
       <div class="project-card" data-title="Device Protection" data-description="Custom phone pouches, specs cases, and protection for tech gear.">
         <h3 class="project-title">Device Protection</h3>
-        <img src="./Gallery/BPP.jpg" alt="Protection">
+        <img src="./Gallery/BPP.jpg" alt="Device Protection Accessories" title="Device Protection Accessories">
       </div>
     </section>
   </main>
@@ -95,7 +96,6 @@
 
       <span class="footer-icon" data-type="photo">📷</span>
       <span class="footer-info" id="footer-photo">advancedtextilesolutions</span>
-  
     </div>
   </footer>
 
