--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects - Advanced Textile Solutions</title>
+  <title>Services - Advanced Textile Solutions</title>
   <link rel="icon" type="image/png" href="./Gallery/731e0316-fa9e-4a86-b3a7-bab115e8a659.jpeg" />
   <link rel="stylesheet" href="services.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
